tests/fixtures/errors/division-by-zero/src/main.ts
const result = 10 / 0;
console.log(result); // Infinity